--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.4.1
+beautifulsoup4==4.9.3
+bs4==0.0.1
 Django==3.2.6
 greenlet==1.1.1
-psycopg2==2.9.1
+numpy==1.21.2
+pandas==1.3.2
+psycopg2-binary==2.9.1
+python-dateutil==2.8.2
 pytz==2021.1
+six==1.16.0
+soupsieve==2.2.1
 SQLAlchemy==1.4.22
 sqlparse==0.4.1
